--- a/style.css
+++ b/style.css
@@ -64,3 +64,25 @@ article.media-post > footer ul {
 .hidden {
   visibility: hidden;
 }
+
+.spinner{
+  border: 2px solid rgb(170,184,194);
+  border-top: 3px solid #f25a41;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 2px;
+  margin-top: 2px;
+  border-radius: 100%;
+  color: transparent;
+  position: absolute;
+  animation: spin .5s infinite linear;
+}
+
+@keyframes spin {
+  from {
+      transform: rotate(0deg);
+  } to {
+      transform: rotate(360deg);
+  }
+}
+
